can wrap markdown in a span but not a div. It's a block vs. inline issue

--- a/data/html/foo.css
+++ b/data/html/foo.css
@@ -7,7 +7,9 @@ h1, h2, h3, h4, h5 {
   color: #990000;
 }
 
-div.foo {
+.foo {
+  margin: 3px;
   border: 1px solid black;
-  background-color: silver;
+  background-color: #d5d5d5;
+  width: 300px;
 }
